compiler/testData/diagnostics/tests/backingField/ReadForwardInAnonymous.kt
class ReadForward() {
    init {
        val <!UNUSED_VARIABLE!>x<!> = <!BACKING_FIELD_USAGE_DEPRECATED, UNINITIALIZED_VARIABLE!>$a<!>
    }

    val a = 1
}
